--- a/SDPCRL.DAL.Service/SDPCRL.DAL.Service.csproj
+++ b/SDPCRL.DAL.Service/SDPCRL.DAL.Service.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SDPCRL.DAL.Service</RootNamespace>
     <AssemblyName>SDPCRL.DAL.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
