--- a/SDPCRL.COM/SDPCRL.COM.csproj
+++ b/SDPCRL.COM/SDPCRL.COM.csproj
@@ -50,6 +50,8 @@
     <Compile Include="ModelManager\DefineTable.cs" />
     <Compile Include="ModelManager\DSList.cs" />
     <Compile Include="ModelManager\LibField.cs" />
+    <Compile Include="ModelManager\LibFormSource.cs" />
+    <Compile Include="ModelManager\LibPermissionSource.cs" />
     <Compile Include="ModelManager\ModelManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLBuilder.cs" />
