--- a/BWYSDPDAL/BWYSDPDAL.csproj
+++ b/BWYSDPDAL/BWYSDPDAL.csproj
@@ -48,6 +48,10 @@
       <Project>{33D0D0E5-25C7-4E54-850D-C04CF586B120}</Project>
       <Name>SDPCRL.DAL.BUS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SDPCRL.IBussiness\SDPCRL.IBussiness.csproj">
+      <Project>{CA14898F-89A2-4DE8-A369-464954C7BA75}</Project>
+      <Name>SDPCRL.IBussiness</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
