--- a/BWYSDP/BWYSDP.csproj
+++ b/BWYSDP/BWYSDP.csproj
@@ -94,6 +94,12 @@
     <Compile Include="Controls\DropDownList.Designer.cs">
       <DependentUpon>DropDownList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\FormGroupFieldProperty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\FormGroupFieldProperty.Designer.cs">
+      <DependentUpon>FormGroupFieldProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\FormGroupProperty.cs">
       <SubType>UserControl</SubType>
     </Compile>
