--- a/SDPCRL.COM/SDPCRL.COM.csproj
+++ b/SDPCRL.COM/SDPCRL.COM.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ModelManager\FormTemplate\LibFormGroupField.cs" />
     <Compile Include="ModelManager\FormTemplate\LibFormPage.cs" />
     <Compile Include="ModelManager\FormTemplate\LibGridGroup.cs" />
+    <Compile Include="ModelManager\FormTemplate\LibGridGroupField.cs" />
     <Compile Include="ModelManager\LibField.cs" />
     <Compile Include="ModelManager\LibFormSource.cs" />
     <Compile Include="ModelManager\LibPermissionSource.cs" />
