--- a/SDPCRL.BLL.BUS/SDPCRL.BLL.BUS.csproj
+++ b/SDPCRL.BLL.BUS/SDPCRL.BLL.BUS.csproj
@@ -53,6 +53,10 @@
       <Project>{A6DD1483-D68F-401B-B7F8-F3B977AC7500}</Project>
       <Name>SDPCRL.COM %28SDPCRL\SDPCRL.BLL\SDPCRL.COM%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SDPCRL.CORE\SDPCRL.CORE.csproj">
+      <Project>{6737331B-873F-432B-BF3B-97B64C8E0C5F}</Project>
+      <Name>SDPCRL.CORE</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SDPCRL.IBussiness\SDPCRL.IBussiness.csproj">
       <Project>{CA14898F-89A2-4DE8-A369-464954C7BA75}</Project>
       <Name>SDPCRL.IBussiness</Name>
