--- a/SDPCRL.BLL.BUS/SDPCRL.BLL.BUS.csproj
+++ b/SDPCRL.BLL.BUS/SDPCRL.BLL.BUS.csproj
@@ -51,7 +51,7 @@
     </ProjectReference>
     <ProjectReference Include="..\SDPCRL.COM\SDPCRL.COM.csproj">
       <Project>{A6DD1483-D68F-401B-B7F8-F3B977AC7500}</Project>
-      <Name>SDPCRL.COM %28SDPCRL\SDPCRL.BLL\SDPCRL.COM%29</Name>
+      <Name>SDPCRL.COM</Name>
     </ProjectReference>
     <ProjectReference Include="..\SDPCRL.CORE\SDPCRL.CORE.csproj">
       <Project>{6737331B-873F-432B-BF3B-97B64C8E0C5F}</Project>
