--- a/SDPCRL.IBussiness/SDPCRL.IBussiness.csproj
+++ b/SDPCRL.IBussiness/SDPCRL.IBussiness.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SDPCRL.COM\SDPCRL.COM.csproj">
       <Project>{A6DD1483-D68F-401B-B7F8-F3B977AC7500}</Project>
-      <Name>SDPCRL.COM %28SDPCRL\SDPCRL.BLL\SDPCRL.COM%29</Name>
+      <Name>SDPCRL.COM</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
