--- a/SDPCRL.COM/SDPCRL.COM.csproj
+++ b/SDPCRL.COM/SDPCRL.COM.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DBModelOperation.cs" />
     <Compile Include="DMLOperation.cs" />
     <Compile Include="ErrorMessage.cs" />
+    <Compile Include="LibLanguage.cs" />
     <Compile Include="LibSearchCondition.cs" />
     <Compile Include="ModelManager\com\EnumOperation.cs" />
     <Compile Include="ModelManager\DataSource.cs" />
