--- a/SDPCRL.COM/SDPCRL.COM.csproj
+++ b/SDPCRL.COM/SDPCRL.COM.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ModelManager\FormTemplate\LibFormGroup.cs" />
     <Compile Include="ModelManager\FormTemplate\LibFormGroupField.cs" />
     <Compile Include="ModelManager\FormTemplate\LibFormPage.cs" />
+    <Compile Include="ModelManager\FormTemplate\LibGridButton.cs" />
     <Compile Include="ModelManager\FormTemplate\LibGridGroup.cs" />
     <Compile Include="ModelManager\FormTemplate\LibGridGroupField.cs" />
     <Compile Include="ModelManager\LibField.cs" />
