--- a/BWYSDP/BWYSDP.csproj
+++ b/BWYSDP/BWYSDP.csproj
@@ -58,6 +58,18 @@
     <Compile Include="Controls\BaseUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Controls\ButtonGroupProperty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ButtonGroupProperty.Designer.cs">
+      <DependentUpon>ButtonGroupProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ButtonProperty.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ButtonProperty.Designer.cs">
+      <DependentUpon>ButtonProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\DataSourceControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -168,6 +180,12 @@
     </Compile>
     <Compile Include="Controls\PermissionProperty.Designer.cs">
       <DependentUpon>PermissionProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\RelateFieldControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\RelateFieldControl.Designer.cs">
+      <DependentUpon>RelateFieldControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\RelateFieldProperty.cs">
       <SubType>UserControl</SubType>
@@ -286,12 +304,16 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\FormTemplate.resx">
       <DependentUpon>FormTemplate.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\FromSourceControl.resx">
       <DependentUpon>FromSourceControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\KeyValuesControl.resx">
       <DependentUpon>KeyValuesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\RelateFieldControl.resx">
+      <DependentUpon>RelateFieldControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\TBStructProperty.resx">
       <DependentUpon>TBStructProperty.cs</DependentUpon>
