--- a/SDPCRL.CORE/SDPCRL.CORE.csproj
+++ b/SDPCRL.CORE/SDPCRL.CORE.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialManager.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BWYResFactory\BWYResFactory.csproj">
+      <Project>{33cc4123-1946-498b-bb4f-986e5785c5c5}</Project>
+      <Name>BWYResFactory</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
