--- a/SDPCRL.CORE/SDPCRL.CORE.csproj
+++ b/SDPCRL.CORE/SDPCRL.CORE.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DesCryptFactory.cs" />
     <Compile Include="ExceptionHelp.cs" />
     <Compile Include="FileUtils\FileOperation.cs" />
+    <Compile Include="FileUtils\FTPHelp.cs" />
     <Compile Include="FileUtils\XMLOperation.cs" />
     <Compile Include="LibCollection.cs" />
     <Compile Include="LibEventArgs.cs" />
