--- a/BWYSDPWebDAL/ComDal/ComDal.csproj
+++ b/BWYSDPWebDAL/ComDal/ComDal.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AAD6A3CA-176E-46F6-A06B-3878E3434F23}</ProjectGuid>
+    <ProjectGuid>{BAE97AC1-7162-4C73-B243-DE8EEFC5DE79}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SDPCRL.DAL.COM</RootNamespace>
-    <AssemblyName>SDPCRL.DAL.COM</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>ComDal</RootNamespace>
+    <AssemblyName>ComDal</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,9 +31,21 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SDPCRL.COM">
+      <HintPath>..\library\SDPCRL.COM.dll</HintPath>
+    </Reference>
+    <Reference Include="SDPCRL.CORE, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\library\SDPCRL.CORE.dll</HintPath>
+    </Reference>
+    <Reference Include="SDPCRL.DAL.BUS">
+      <HintPath>..\library\Dal\SDPCRL.DAL.BUS.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,31 +55,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DalAssemblyHelp.cs" />
-    <Compile Include="DBInfoHelp.cs" />
+    <Compile Include="CheckBillDal.cs" />
+    <Compile Include="ComDal.cs" />
+    <Compile Include="MaterialsDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLBuilder.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BWYResFactory\BWYResFactory.csproj">
-      <Project>{33CC4123-1946-498B-BB4F-986E5785C5C5}</Project>
-      <Name>BWYResFactory</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SDPCRL.COM\SDPCRL.COM.csproj">
-      <Project>{a6dd1483-d68f-401b-b7f8-f3b977ac7500}</Project>
-      <Name>SDPCRL.COM</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SDPCRL.CORE\SDPCRL.CORE.csproj">
-      <Project>{6737331b-873f-432b-bf3b-97b64c8e0c5f}</Project>
-      <Name>SDPCRL.CORE</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <PropertyGroup>
+    <PostBuildEvent>Copy "$(SolutionDir)\ComDal\bin\Debug\ComDal.dll" "D:\work\zyyinfo\BWYSDP(2)\BWYSDP\LibraryCode\InitialTool\bin\Debug\Runtime\DAL"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
