--- a/SDPCRL.CORE/SDPCRL.CORE.csproj
+++ b/SDPCRL.CORE/SDPCRL.CORE.csproj
@@ -55,6 +55,7 @@
     <Compile Include="LibExceptionBase.cs" />
     <Compile Include="LibFormAcceptmsgEventArgs.cs" />
     <Compile Include="LibLock.cs" />
+    <Compile Include="LibProgAttribute.cs" />
     <Compile Include="LibSqlExceptionEventSource.cs" />
     <Compile Include="LibSysUtils.cs" />
     <Compile Include="LibXmlAttributeAttribute.cs" />
@@ -70,6 +71,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
