--- a/BWYSDPWebDAL/AuthorityDal/AuthorityDal.csproj
+++ b/BWYSDPWebDAL/AuthorityDal/AuthorityDal.csproj
@@ -32,21 +32,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SDPCRL.COM">
-      <HintPath>..\library\SDPCRL.COM.dll</HintPath>
+      <HintPath>..\..\SDPCRL.COM\bin\Debug\Runtime\SDPCRL.COM.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.CORE">
-      <HintPath>..\library\SDPCRL.CORE.dll</HintPath>
+      <HintPath>..\..\SDPCRL.CORE\bin\Debug\Runtime\SDPCRL.CORE.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.DAL.BUS">
-      <HintPath>..\library\Dal\SDPCRL.DAL.BUS.dll</HintPath>
+      <HintPath>..\..\SDPCRL.DAL.BUS\bin\Debug\SDPCRL.DAL.BUS.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.DAL.COM, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\Dal\SDPCRL.DAL.COM.dll</HintPath>
+      <HintPath>..\..\SDPCRL.DAL.COM\bin\Debug\SDPCRL.DAL.COM.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.IBussiness, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\SDPCRL.IBussiness.dll</HintPath>
+      <HintPath>..\..\SDPCRL.IBussiness\bin\Debug\SDPCRL.IBussiness.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -70,4 +70,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>Copy "$(SolutionDir)\BWYSDPWebDAL\AuthorityDal\bin\Debug\AuthorityDal.dll" "$(SolutionDir)\InitialTool\bin\Debug\Runtime\DAL"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
