--- a/BWYSDPWebDAL/ComDal/ComDal.csproj
+++ b/BWYSDPWebDAL/ComDal/ComDal.csproj
@@ -36,14 +36,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SDPCRL.COM">
-      <HintPath>..\library\SDPCRL.COM.dll</HintPath>
+      <HintPath>..\..\SDPCRL.COM\bin\Debug\Runtime\SDPCRL.COM.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.CORE, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\SDPCRL.CORE.dll</HintPath>
+      <HintPath>..\..\SDPCRL.CORE\bin\Debug\Runtime\SDPCRL.CORE.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.DAL.BUS">
-      <HintPath>..\library\Dal\SDPCRL.DAL.BUS.dll</HintPath>
+      <HintPath>..\..\SDPCRL.DAL.BUS\bin\Debug\SDPCRL.DAL.BUS.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
