--- a/BWYSDPWebDAL/BWYSDPBaseDal/BWYSDPBaseDal.csproj
+++ b/BWYSDPWebDAL/BWYSDPBaseDal/BWYSDPBaseDal.csproj
@@ -31,24 +31,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BWYResFactory">
-      <HintPath>..\library\BWYResFactory.dll</HintPath>
+      <HintPath>..\..\BWYResFactory\bin\Debug\BWYResFactory.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.COM, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\SDPCRL.COM.dll</HintPath>
+      <HintPath>..\..\SDPCRL.COM\bin\Debug\Runtime\SDPCRL.COM.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.CORE, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\library\SDPCRL.CORE.dll</HintPath>
+      <HintPath>..\..\SDPCRL.CORE\bin\Debug\Runtime\SDPCRL.CORE.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.DAL.BUS">
-      <HintPath>..\library\Dal\SDPCRL.DAL.BUS.dll</HintPath>
+      <HintPath>..\..\SDPCRL.DAL.BUS\bin\Debug\SDPCRL.DAL.BUS.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.DAL.COM">
-      <HintPath>..\library\Dal\SDPCRL.DAL.COM.dll</HintPath>
+      <HintPath>..\..\SDPCRL.DAL.COM\bin\Debug\SDPCRL.DAL.COM.dll</HintPath>
     </Reference>
     <Reference Include="SDPCRL.IBussiness">
-      <HintPath>..\library\SDPCRL.IBussiness.dll</HintPath>
+      <HintPath>..\..\SDPCRL.IBussiness\bin\Debug\SDPCRL.IBussiness.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
