--- a/BWYSDPDAL/BWYSDPDAL.csproj
+++ b/BWYSDPDAL/BWYSDPDAL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DalDataBase.cs" />
+    <Compile Include="DataLogDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
