--- a/SDPCRL.COM/SDPCRL.COM.csproj
+++ b/SDPCRL.COM/SDPCRL.COM.csproj
@@ -76,8 +76,12 @@
     <Compile Include="ModelManager\LibKeyValueCollection.cs" />
     <Compile Include="ModelManager\LibPermissionSource.cs" />
     <Compile Include="ModelManager\ModelManager.cs" />
+    <Compile Include="ModelManager\Reports\LibReportColumn.cs" />
+    <Compile Include="ModelManager\Reports\LibReportContainer.cs" />
+    <Compile Include="ModelManager\Reports\LibReportElement.cs" />
     <Compile Include="ModelManager\Reports\LibReportField.cs" />
     <Compile Include="ModelManager\Reports\LibReportGrid.cs" />
+    <Compile Include="ModelManager\Reports\LibReportRow.cs" />
     <Compile Include="ModelManager\Reports\LibReportsSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchConditionHelper.cs" />
